--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "lib": [
+      "dom",
+      "es5",
+      "scripthost",
       "es2015.iterable"
     ]
   }
